fixed gap between svg and div

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -33,6 +33,7 @@
 .about-container {
   width: 100%;
   min-width: 320px; // Add a minimum width
+  margin: -5px;
   padding: 0;
   display: flex;
   justify-content: center;
